# CanaryEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.claude/: settings.local.json
engine/: CMakeLists.txt
engine/include/Canary/: Canary.h
engine/include/Canary/Core/: Application.cpp  Application.h  EntryPoint.h  Window.cpp  Window.h
engine/include/Canary/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
engine/src/: main_engine_dummy.cpp
game/: CMakeLists.txt
game/src/: main.cpp
